--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ninja Recipes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/dist/output.css">
 </head>
-<body>
+<body class="text-yellow-400">
     
     <div><!-- content wrapper -->
         <div>
@@ -53,7 +53,7 @@
                 <div>
                     <!-- cards go here -->
                     <div>
-                        <img src="./img/stew.jpg" alt="stew">
+                        <img src="/dist/img/stew.jpg" alt="stew">
                         <div>
                             <span>5 Bean Chilli Stew</span>
                             <span>Recipe by Mario</span>
