--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,18 @@
     <title>Ninja Recipes</title>
     <link rel="stylesheet" href="/dist/output.css">
 </head>
-<body class="text-yellow-400">
+<body class="text-gray-600">
     
     <div><!-- content wrapper -->
         <div>
             <nav>
                 <div>
-                    <h1>
+                    <h1 class="font-bold uppercase p-4 border-b border-gray-100">
                         <a href="/">Food Ninja</a>
                     </h1>
                 </div>
                 <ul>
-                    <li>
+                    <li class="text-gray-700 font-bold">
                         <a href="#">
                             <span>Home</span>
                         </a>
@@ -36,21 +36,21 @@
             </nav>
         </div><!-- end nav -->
 
-        <main>
+        <main class="px-16 py-6">
             <div>
                 <a href="#">Log In</a>
                 <a href="#">Sign Up</a>
             </div>
 
             <header>
-                <h2>Recipes</h2>
-                <h3>For Ninjas</h3>
+                <h2 class="text-gray-700 text-6xl font-medium">Recipes</h2>
+                <h3 class="text-2xl font-medium">For Ninjas</h3>
             </header>
 
             <div>
-                <h4>Latest Recipes</h4>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
 
-                <div>
+                <div class="mt-8">
                     <!-- cards go here -->
                     <div>
                         <img src="/dist/img/stew.jpg" alt="stew">
@@ -61,9 +61,9 @@
                     </div>
                 </div>
 
-                <h4>Most Popular</h4>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
 
-                <div>
+                <div class="mt-8">
                     <!-- cards go here -->
 
                 </div>
