Add custom theme colors

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
 
         <main class="px-16 py-6">
             <div>
-                <a href="#">Log In</a>
-                <a href="#">Sign Up</a>
+                <a href="#" class="text-primary">Log In</a>
+                <a href="#" class="text-primary">Sign Up</a>
             </div>
 
             <header>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div>
-                    <div>
+                    <div class="bg-secondary-100 text-secondary-200">
                         Load more
                     </div>
                 </div>
