--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                        <a href="/">Food Ninja</a>
+                        <a href="/" class="">Food Ninja</a>
                     </h1>
                 </div>
                 <ul>
@@ -36,8 +36,8 @@
             </nav>
         </div><!-- end nav -->
 
-        <main class="px-16 py-6">
-            <div>
+        <main class="px-16 py-6 bg-gray-100">
+            <div class="flex justify-center md:justify-end gap-2">
                 <a href="#" class="text-primary">Log In</a>
                 <a href="#" class="text-primary">Sign Up</a>
             </div>
@@ -52,11 +52,14 @@
 
                 <div class="mt-8">
                     <!-- cards go here -->
-                    <div>
-                        <img src="/dist/img/stew.jpg" alt="stew">
-                        <div>
-                            <span>5 Bean Chilli Stew</span>
-                            <span>Recipe by Mario</span>
+                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                        <img src="/dist/img/stew.jpg" alt="stew" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold ">5 Bean Chilli Stew</span>
+                            <span class="block text-gray-500 text-sm">Recipe by Mario</span>
+                        </div>
+                        <div class="bg-secondary-100 text-secondary-200 text-xs upercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2">
+                            <span>25 mins</span>
                         </div>
                     </div>
                 </div>
@@ -68,7 +71,7 @@
 
                 </div>
 
-                <div>
+                <div class="flex justify-center">
                     <div class="bg-secondary-100 text-secondary-200">
                         Load more
                     </div>
