--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="text-gray-600 font-body">
     
-    <div><!-- content wrapper -->
+    <div class="grid md:grid-cols-3"><!-- content wrapper -->
         <div>
             <nav>
                 <div>
@@ -36,10 +36,10 @@
             </nav>
         </div><!-- end nav -->
 
-        <main class="px-16 py-6 bg-gray-100">
+        <main class="px-16 py-6 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end gap-2">
-                <a href="#" class="text-primary">Log In</a>
-                <a href="#" class="text-primary">Sign Up</a>
+                <a href="#" class="text-primary btn border-primary md:border-2">Log In</a>
+                <a href="#" class="text-primary btn border-primary md:border-2">Sign Up</a>
             </div>
 
             <header>
@@ -50,15 +50,35 @@
             <div>
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
 
-                <div class="mt-8">
+                <div class="mt-8 grid lg:grid-cols-3 gap-10">
                     <!-- cards go here -->
-                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                    <div class="card">
                         <img src="/dist/img/stew.jpg" alt="stew" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
                             <span class="font-bold ">5 Bean Chilli Stew</span>
                             <span class="block text-gray-500 text-sm">Recipe by Mario</span>
                         </div>
-                        <div class="bg-secondary-100 text-secondary-200 text-xs upercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2">
+                        <div class="badge">
+                            <span>25 mins</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/dist/img/noodles.jpg" alt="noodles" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold ">Veg Noodles</span>
+                            <span class="block text-gray-500 text-sm">Recipe by Mario</span>
+                        </div>
+                        <div class="badge">
+                            <span>25 mins</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/dist/img/curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold ">Tofu Curry</span>
+                            <span class="block text-gray-500 text-sm">Recipe by Mario</span>
+                        </div>
+                        <div class="badge">
                             <span>25 mins</span>
                         </div>
                     </div>
@@ -72,7 +92,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="bg-secondary-100 text-secondary-200">
+                    <div class="bg-secondary-100 text-secondary-200 btn">
                         Load more
                     </div>
                 </div>
