--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
 
         <main class="px-16 py-6 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end gap-2">
-                <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white">Log In</a>
-                <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white">Sign Up</a>
+                <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Log In</a>
+                <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Sign Up</a>
             </div>
 
             <header>
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">
+                    <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">
                         Load more
                     </div>
                 </div>
