Add relative address to

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ninja Recipes</title>
-    <link rel="stylesheet" href="/dist/output.css">
+    <link rel="stylesheet" href="../dist/output.css">
     <script src="./javascript.js" defer></script>
 </head>
 <body class="text-gray-600 font-body min-h-screen">
